# arcana-xnat

./: .gitignore  README.rst  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
arcana/xnat/: _version.py
arcana/xnat/cli/tests/: test_cli_install_license.py
arcana/xnat/data/: api.py
scripts/: dicom_dump.py
