[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "arcana-xnat"
description = "An extension of the Arcana framework to apply workflows and analyses on data stored within XNAT data repositories"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "xnat >=0.4.3",
    "fileformats_core @ git+https://github.com/ArcanaFramework/fileformats-core@develop",  # "fileformats-core >=0.1",
    "fileformats_common @ git+https://github.com/ArcanaFramework/fileformats-common@develop",  # "fileformats-common >= 0.1.1",
    "fileformats_medimage @ git+https://github.com/ArcanaFramework/fileformats-medimage@develop",  # "fileformats-medimage >= 0.1",
    "arcana_core @ git+https://github.com/ArcanaFramework/arcana-core@develop",  # "arcana-core >=0.8.6",
]
license = {file = "LICENSE"}
authors = [{name = "Thomas G. Close", email = "tom.g.close@gmail.com"}]
maintainers = [{name = "Thomas G. Close", email = "tom.g.close@gmail.com"}]
keywords = ["arcana"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # "black",
    "pre-commit",
]
doc = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]
test = [
    "pytest >= 4.4.0",
    "pytest-cov",
    "pytest-env",
    "xnat4tests >=0.3.3",
    "medimages4tests >=0.3",
    "arcana-bids >=0.1",
    "codecov",
]

[tool.flit.module]
name = "arcana.xnat"

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "arcana/xnat/_version.py"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = "_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"
